--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "googleapis": "^126.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
@@ -22,6 +23,7 @@
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "password-validator": "^5.3.0",
+    "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
 }
