--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -1,6 +1,5 @@
 {
   "name": "my-app",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +16,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
